feature(ContactSerializer, MainVM, MainWindow): добавлена сериализация контакта, добавлены команды для сохранения и загрузки контакта, выполнена привязка событий на главном окне

--- a/src/Contacts/MainWindow.xaml
+++ b/src/Contacts/MainWindow.xaml
@@ -24,27 +24,27 @@
         <GroupBox Grid.Row="0" Grid.Column="0" Header="Edit Contact">
             <StackPanel>
                 <TextBlock Text="Name:" Margin="3px"/>
-                <TextBox Margin="3px"/>
+                <TextBox Margin="3px" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBlock Text="Phone Number:" Margin="3px"/>
-                <TextBox Margin="3px"/>
+                <TextBox Margin="3px" Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBlock Text="Email:" Margin="3px"/>
-                <TextBox Margin="3px"/>
+                <TextBox Margin="3px" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </GroupBox>
         <GridSplitter Grid.Row="0" Grid.Column="1"/>
         <GroupBox Grid.Row="0" Grid.Column="2" Header="Read Contact">
             <StackPanel>
                 <TextBlock Text="Name:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold"/>
+                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBlock Text="Phone Number:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold"/>
+                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBlock Text="Email:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold"/>
+                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </GroupBox>
         <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Save" Margin="3px" Width="75px" Height="25px"/>
-            <Button Content="Load" Margin="3px" Width="75px" Height="25px"/>
+            <Button Content="Save" Margin="3px" Width="75px" Height="25px" Command="{Binding SaveCommand}"/>
+            <Button Content="Load" Margin="3px" Width="75px" Height="25px" Command="{Binding LoadCommand}"/>
         </StackPanel>
     </Grid>
 </Window>
