feature, refactor(MainWindow, Contact): добавлена подзагрузка полей из файла при запуске программы, переписал автосвойства.

--- a/src/Contacts/MainWindow.xaml
+++ b/src/Contacts/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Contacts"
+        xmlns:local="clr-namespace:Contacts" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Icon="Resources/contacts_96x96.ico"
         Title="Contacts" 
@@ -11,7 +11,12 @@
         Width="500px"
         MinHeight="400px"
         MinWidth="500px">
-    <Grid Margin="15px">
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding LoadCommand}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
+        <Grid Margin="15px">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
