feature(MainWindow): изменена верстка главного окна.

--- a/src/Contacts/MainWindow.xaml
+++ b/src/Contacts/MainWindow.xaml
@@ -8,49 +8,64 @@
         mc:Ignorable="d"
         Icon="Resources/contacts_96x96.ico"
         Title="Contacts" 
-        Height="400px"
-        Width="500px"
-        MinHeight="400px"
-        MinWidth="500px">
+        Height="550px"
+        Width="800px"
+        MinHeight="550px"
+        MinWidth="800px">
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="Loaded">
                 <i:InvokeCommandAction Command="{Binding LoadCommand}"/>
             </i:EventTrigger>
         </i:Interaction.Triggers>
-        <Grid Margin="15px">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="9px"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <GroupBox Grid.Row="0" Grid.Column="0" Header="Edit Contact">
-            <StackPanel>
-                <TextBlock Text="Name:" Margin="3px"/>
-                <TextBox Margin="3px" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Text="Phone Number:" Margin="3px"/>
-                <TextBox Margin="3px" Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Text="Email:" Margin="3px"/>
-                <TextBox Margin="3px" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
-            </StackPanel>
-        </GroupBox>
-        <GridSplitter Grid.Row="0" Grid.Column="1"/>
-        <GroupBox Grid.Row="0" Grid.Column="2" Header="Read Contact">
-            <StackPanel>
-                <TextBlock Text="Name:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Text="Phone Number:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Text="Email:" Margin="3px"/>
-                <TextBlock Margin="3px" FontWeight="Bold" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
-            </StackPanel>
-        </GroupBox>
-        <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Save" Margin="3px" Width="75px" Height="25px" Command="{Binding SaveCommand}"/>
-            <Button Content="Load" Margin="3px" Width="75px" Height="25px" Command="{Binding LoadCommand}"/>
-        </StackPanel>
-    </Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" Background="#F8F8F8">
+                <DockPanel Grid.Column="0" Margin="8" LastChildFill="True">
+                    <DockPanel DockPanel.Dock="Top" LastChildFill="True">
+                        <TextBlock Margin="3" VerticalAlignment="Center" DockPanel.Dock="Left" Text="Find:"/>
+                        <TextBox Width="Auto" Margin="3"/>
+                    </DockPanel>
+                    <DockPanel LastChildFill="True">
+                        <Grid DockPanel.Dock="Bottom">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" Height="25" Margin="3" Command="{Binding Path=AddContactCommand}" Content="Add" IsEnabled="{Binding Path=IsReadOnly}"/>
+                            <Button Grid.Column="1" Height="25" Margin="3" Command="{Binding Path=EditContactCommand}" Content="Edit" IsEnabled="{Binding Path=IsReadOnly}"/>
+                            <Button Grid.Column="2" Height="25" Margin="3" Command="{Binding Path=RemoveContactCommand}" Content="Remove" IsEnabled="{Binding Path=IsReadOnly}"/>
+                        </Grid>
+                        <ListBox Margin="3" DisplayMemberPath="Name" DockPanel.Dock="Top" ItemsSource="{Binding Path=Contacts}"
+                                 SelectedItem="{Binding Path=CurrentContact, UpdateSourceTrigger=PropertyChanged}"/>
+                    </DockPanel>
+                </DockPanel>
+            </Grid>
+            <GridSplitter Grid.Column="1" Width="3" HorizontalAlignment="Center" ShowsPreview="False" Background="#FFFF"/>
+            <Grid Grid.Column="2" Margin="8" Background="#FFFF">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Image Grid.Column="0" Width="100" Height="100" Margin="3"
+                       VerticalAlignment="Top" Source="/photo_placeholder_100x100.png"/>
+                <StackPanel Grid.Column="1">
+                    <TextBlock Margin="3" Text="Name:"/>
+                    <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
+                        Text="{Binding Path=CurrentContact.Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBlock Margin="3" Text="Phone Number:"/>
+                    <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
+                        Text="{Binding Path=CurrentContact.PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBlock Margin="3" Text="Email:"/>
+                    <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
+                        Text="{Binding Path=CurrentContact.Email, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Width="75" Height="25" Margin="3 50 3 3" HorizontalAlignment="Left" Content="Apply"
+                        Command="{Binding Path=ApplyContactCommand}"/>
+                </StackPanel>
+            </Grid>
+        </Grid>
 </Window>
