--- a/src/Contacts/MainWindow.xaml
+++ b/src/Contacts/MainWindow.xaml
@@ -1,77 +1,77 @@
-﻿<Window x:Class="Contacts.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        mc:Ignorable="d"
-        Icon="Resources/contacts_96x96.ico"
-        Title="Contacts" 
-        Height="550px"
-        Width="800px"
-        MinHeight="550px"
-        MinWidth="800px">
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction Command="{Binding LoadCommand}"/>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Background="#F8F8F8">
-            <DockPanel Grid.Column="0" Margin="8" LastChildFill="True">
-                <DockPanel DockPanel.Dock="Top" LastChildFill="True">
-                    <TextBlock Margin="3" VerticalAlignment="Center" DockPanel.Dock="Left" Text="Find:"/>
-                    <TextBox Width="Auto" Margin="3"/>
-                </DockPanel>
-                <DockPanel LastChildFill="True">
-                    <Grid DockPanel.Dock="Bottom">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Height="25" Margin="3" 
-                                    Command="{Binding Path=AddContactCommand}" Content="Add" IsEnabled="{Binding Path=IsReadOnly}"/>
-                        <Button Grid.Column="1" Height="25" Margin="3" 
-                                    Command="{Binding Path=EditContactCommand}" Content="Edit" IsEnabled="{Binding Path=IsReadOnly}"/>
-                        <Button Grid.Column="2" Height="25" Margin="3" 
-                                    Command="{Binding Path=RemoveContactCommand}" Content="Remove" IsEnabled="{Binding Path=IsReadOnly}"/>
-                    </Grid>
-                    <ListBox Margin="3" DisplayMemberPath="Name" DockPanel.Dock="Top" ItemsSource="{Binding Path=Contacts}"
-                                 SelectedItem="{Binding Path=SelectedContact, UpdateSourceTrigger=PropertyChanged}"/>
-                </DockPanel>
-            </DockPanel>
-        </Grid>
-        <GridSplitter Grid.Column="1" Width="3" HorizontalAlignment="Center" ShowsPreview="False" Background="#FFFF"/>
-        <Grid Grid.Column="2" Margin="8" Background="#FFFF">
+﻿    <Window x:Class="View.MainWindow"
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+            xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:viewmodel="clr-namespace:View.ViewModel" xmlns:services="clr-namespace:View.Model.Services" d:DataContext="{d:DesignInstance Type=viewmodel:MainVM}"
+            mc:Ignorable="d"
+            Icon="Resources/contacts_96x96.ico"
+            Title="Contacts" 
+            Height="550px"
+            Width="800px"
+            MinHeight="550px"
+            MinWidth="800px">
+        <Window.Resources>
+            <ResourceDictionary>
+                <services:VisibilityConverter x:Key="VisibilityConverter"/>
+            </ResourceDictionary>
+        </Window.Resources>
+        <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Image Grid.Row="1" Grid.Column="0" Width="100" Height="100" Margin="3"
-                       VerticalAlignment="Top" Source="Resources/Images/photo_placeholder_100x100.png"/>
-            <TextBlock Grid.Row="0" Grid.Column="1" Margin="3" Text="Name:"/>
-            <StackPanel Grid.Row="1" Grid.Column="1">
-                <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
-                        Text="{Binding Path=SelectedContact.Name, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Margin="3" Text="Phone Number:"/>
-                <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
-                        Text="{Binding Path=SelectedContact.PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBlock Margin="3" Text="Email:"/>
-                <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
-                        Text="{Binding Path=SelectedContact.Email, UpdateSourceTrigger=PropertyChanged}"/>
-                <Button Width="75" Height="25" Margin="3 50 3 3" HorizontalAlignment="Left" Content="Apply"
-                        Command="{Binding Path=ApplyContactCommand}"/>
-            </StackPanel>
+            <Grid Grid.Column="0" Background="#F8F8F8">
+                <DockPanel Grid.Column="0" Margin="8" LastChildFill="True">
+                    <DockPanel DockPanel.Dock="Top" LastChildFill="True">
+                        <TextBlock Margin="3" VerticalAlignment="Center" DockPanel.Dock="Left" Text="Find:"/>
+                        <TextBox Width="Auto" Margin="3"/>
+                    </DockPanel>
+                    <DockPanel LastChildFill="True">
+                        <Grid DockPanel.Dock="Bottom">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" Height="25" Margin="3" 
+                                    Command="{Binding AddCommand}" Content="Add" IsEnabled="{Binding IsReadOnly}"/>
+                            <Button Grid.Column="1" Height="25" Margin="3" 
+                                    Command="{Binding EditCommand}" Content="Edit" IsEnabled="{Binding IsEdit}"/>
+                            <Button Grid.Column="2" Height="25" Margin="3" 
+                                    Command="{Binding RemoveCommand}" Content="Remove" IsEnabled="{Binding IsEdit}"/>
+                        </Grid>
+                        <ListBox Margin="3" DisplayMemberPath="Name" DockPanel.Dock="Top" ItemsSource="{Binding Path=Contacts}"
+                                 SelectedItem="{Binding Path=SelectedContact, UpdateSourceTrigger=PropertyChanged}"/>
+                    </DockPanel>
+                </DockPanel>
+            </Grid>
+            <GridSplitter Grid.Column="1" Width="3" HorizontalAlignment="Center" ShowsPreview="False" Background="#FFFF"/>
+            <Grid Grid.Column="2" Margin="8" Background="#FFFF">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Image Grid.Row="1" Grid.Column="0" Width="100" Height="100" Margin="3"
+                           VerticalAlignment="Top" Source="Resources/Images/photo_placeholder_100x100.png"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" Margin="3" Text="Name:"/>
+                <StackPanel Grid.Row="1" Grid.Column="1">
+                    <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
+                            Text="{Binding Path=SelectedContact.Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBlock Margin="3" Text="Phone Number:"/>
+                    <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
+                            Text="{Binding Path=SelectedContact.PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBlock Margin="3" Text="Email:"/>
+                    <TextBox Margin="3" IsReadOnly="{Binding Path=IsReadOnly, UpdateSourceTrigger=PropertyChanged}"
+                            Text="{Binding Path=SelectedContact.Email, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Width="75" Height="25" Margin="3 50 3 3" HorizontalAlignment="Left" Content="Apply"
+                            Command="{Binding ApplyCommand}" Visibility="{Binding IsReadOnly, Converter={StaticResource VisibilityConverter}}"/>
+                </StackPanel>
+            </Grid>
         </Grid>
-    </Grid>
-</Window>
+    </Window>
