feature(View, Model, ViewModel): разделил проект на 3 отдельных проекта.

--- a/src/Contacts/MainWindow.xaml
+++ b/src/Contacts/MainWindow.xaml
@@ -4,7 +4,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:viewmodel="clr-namespace:View.ViewModel" xmlns:services="clr-namespace:View.Model.Services" xmlns:controls="clr-namespace:View.Control" d:DataContext="{d:DesignInstance Type=viewmodel:MainVM}"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+        xmlns:services="clr-namespace:View" 
+        xmlns:controls="clr-namespace:View.Controls" 
+        xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
+    d:DataContext="{d:DesignInstance viewmodel:MainVM}"
         mc:Ignorable="d"
         Icon="Resources/contacts_96x96.ico"
         Title="Contacts" 
