--- a/src/Contacts/Controls/ContactControl.xaml
+++ b/src/Contacts/Controls/ContactControl.xaml
@@ -1,11 +1,12 @@
 ﻿<UserControl 
-    x:Class="View.Control.ContactControl"
+    x:Class="View.Controls.ContactControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:local="clr-namespace:View.Control" 
-    xmlns:viewmodel="clr-namespace:View.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainVM}"
+    xmlns:local="clr-namespace:View.Controls" 
+    xmlns:viewmodel="clr-namespace:ViewModel" 
+    d:DataContext="{d:DesignInstance viewmodel:MainVM}"
     mc:Ignorable="d" 
     d:DesignHeight="450" 
     d:DesignWidth="800">
