--- a/src/Contacts/Controls/ContactControl.xaml
+++ b/src/Contacts/Controls/ContactControl.xaml
@@ -5,8 +5,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:local="clr-namespace:View.Controls" 
-    xmlns:viewmodel="clr-namespace:ViewModel" 
-    d:DataContext="{d:DesignInstance viewmodel:MainVM}"
+    xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
+    d:DataContext="{d:DesignInstance viewmodel:ContactVM}"
     mc:Ignorable="d" 
     d:DesignHeight="450" 
     d:DesignWidth="800">
