--- a/src/Contacts/MainWindow.xaml
+++ b/src/Contacts/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿    <Window 
+﻿<Window 
         x:Class="View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
-        xmlns:services="clr-namespace:View" 
+        xmlns:services="clr-namespace:View.Converters" 
         xmlns:controls="clr-namespace:View.Controls" 
         xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
     d:DataContext="{d:DesignInstance viewmodel:MainVM}"
@@ -16,9 +16,10 @@
         Width="800px"
         MinHeight="550px"
         MinWidth="800px">
-        <Window.Resources>
+    <Window.Resources>
         <ResourceDictionary>
             <services:VisibilityConverter x:Key="VisibilityConverter"/>
+            <services:InverseVisibilityConverter x:Key="InverseVisibilityConverter"/>
             <DataTemplate x:Key="ContactTemplate">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -30,14 +31,14 @@
                         Height="48"
                         Source="Resources/Images/photo_placeholder_100x100.png"/>
                     <StackPanel Grid.Column="1" Orientation="Vertical" Margin="3">
-                    <TextBlock
+                        <TextBlock
                             FontSize="14"
                             FontWeight="SemiBold" 
                             Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                    <TextBlock
+                        <TextBlock
                             FontSize="12" 
                             Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
-                </StackPanel>
+                    </StackPanel>
                 </Grid>
             </DataTemplate>
             <Color x:Key="WhiteBackgroundColor">#ffffff</Color>
@@ -51,75 +52,76 @@
                 </Style.Triggers>
             </Style>
         </ResourceDictionary>
-        </Window.Resources>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.3*"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="0.7*"/>
-            </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0" Background="#F8F8F8">
-                <DockPanel Grid.Column="0" Margin="8" LastChildFill="True">
-                    <DockPanel DockPanel.Dock="Top" LastChildFill="True">
-                        <TextBlock 
+    </Window.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.3*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.7*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Background="#F8F8F8">
+            <DockPanel Grid.Column="0" Margin="8" LastChildFill="True">
+                <DockPanel DockPanel.Dock="Top" LastChildFill="True">
+                    <TextBlock 
                             Margin="3" 
                             VerticalAlignment="Center" 
                             DockPanel.Dock="Left" 
                             Text="Find:"/>
-                        <TextBox Width="Auto" Margin="3"/>
-                    </DockPanel>
-                    <DockPanel LastChildFill="True">
-                        <Grid DockPanel.Dock="Bottom">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Button Grid.Column="0" 
+                    <TextBox Width="Auto" Margin="3"/>
+                </DockPanel>
+                <DockPanel LastChildFill="True">
+                    <Grid DockPanel.Dock="Bottom">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" 
                                     Height="25" 
                                     Margin="3" 
                                     Command="{Binding AddCommand}" 
                                     Content="Add" 
                                     IsEnabled="{Binding IsReadOnly}"/>
-                            <Button Grid.Column="1" 
+                        <Button Grid.Column="1" 
                                     Height="25" 
                                     Margin="3" 
                                     Command="{Binding EditCommand}" 
                                     Content="Edit" 
                                     IsEnabled="{Binding IsEdit}"/>
-                            <Button Grid.Column="2" 
+                        <Button Grid.Column="2" 
                                     Height="25" 
                                     Margin="3" 
                                     Command="{Binding RemoveCommand}" 
                                     Content="Remove" 
                                     IsEnabled="{Binding IsEdit}"/>
-                        </Grid>
+                    </Grid>
                     <ListBox
                          ItemTemplate="{StaticResource ContactTemplate}"
                          ItemsSource="{Binding Contacts}"
                          SelectedItem="{Binding SelectedContact, UpdateSourceTrigger=PropertyChanged}"
                          Validation.ErrorTemplate="{x:Null}" />
                 </DockPanel>
-                </DockPanel>
-            </Grid>
-            <GridSplitter
+            </DockPanel>
+        </Grid>
+        <GridSplitter
                 Grid.Column="1"
                 Width="3px"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Stretch" />
-            <StackPanel
+        <StackPanel
                 Grid.Column="2"
                 Margin="3"
                 Orientation="Vertical">
-                <controls:ContactControl SelectedContact="{Binding SelectedContact}" Validation.ErrorTemplate="{x:Null}" />
-                <Button 
+            <controls:ContactControl SelectedContact="{Binding SelectedContact}" Validation.ErrorTemplate="{x:Null}" />
+            <Button 
                     Width="75" 
                     Height="25" 
                     Margin="109 10 3 3" 
                     HorizontalAlignment="Left" 
                     Content="Apply"
                     Command="{Binding ApplyCommand}" 
-                    Visibility="{Binding IsReadOnly, Converter={StaticResource VisibilityConverter}}"/>
-            </StackPanel>
-        </Grid>
-    </Window>
+                    Visibility="{Binding IsReadOnly, Converter={StaticResource VisibilityConverter}}"
+                    IsEnabled="{Binding SelectedContact.HasErrors, Converter={StaticResource InverseVisibilityConverter}}"/>
+        </StackPanel>
+    </Grid>
+</Window>
