fix(MainWindow): убрана подсветка некорректных полей в ListBox, исправлена верстка.

--- a/src/Contacts/MainWindow.xaml
+++ b/src/Contacts/MainWindow.xaml
@@ -34,10 +34,12 @@
                         <TextBlock
                             FontSize="14"
                             FontWeight="SemiBold" 
-                            Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                            Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
+                            Validation.ErrorTemplate="{x:Null}"/>
                         <TextBlock
                             FontSize="12" 
-                            Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
+                            Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"
+                            Validation.ErrorTemplate="{x:Null}"/>
                     </StackPanel>
                 </Grid>
             </DataTemplate>
@@ -67,7 +69,7 @@
                             VerticalAlignment="Center" 
                             DockPanel.Dock="Left" 
                             Text="Find:"/>
-                    <TextBox Width="Auto" Margin="3"/>
+                    <TextBox Width="Auto" Margin="0 3 0 3"/>
                 </DockPanel>
                 <DockPanel LastChildFill="True">
                     <Grid DockPanel.Dock="Bottom">
@@ -78,19 +80,19 @@
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0" 
                                     Height="25" 
-                                    Margin="3" 
+                                    Margin="0 3 3 3" 
                                     Command="{Binding AddCommand}" 
                                     Content="Add" 
                                     IsEnabled="{Binding IsReadOnly}"/>
                         <Button Grid.Column="1" 
                                     Height="25" 
-                                    Margin="3" 
+                                    Margin="3 3 3 3" 
                                     Command="{Binding EditCommand}" 
                                     Content="Edit" 
                                     IsEnabled="{Binding IsEdit}"/>
                         <Button Grid.Column="2" 
                                     Height="25" 
-                                    Margin="3" 
+                                    Margin="3 3 0 3" 
                                     Command="{Binding RemoveCommand}" 
                                     Content="Remove" 
                                     IsEnabled="{Binding IsEdit}"/>
@@ -99,7 +101,7 @@
                          ItemTemplate="{StaticResource ContactTemplate}"
                          ItemsSource="{Binding Contacts}"
                          SelectedItem="{Binding SelectedContact, UpdateSourceTrigger=PropertyChanged}"
-                         Validation.ErrorTemplate="{x:Null}" />
+                         Validation.ErrorTemplate="{x:Null}"/>
                 </DockPanel>
             </DockPanel>
         </Grid>
